password entity separation and email integration- rest password - not veified